# AndroidNativeCrashMonitor

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wuzhu/ncrash/monitor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wuzhu/ncrash/monitor/: MainActivity.kt
app/src/main/java/com/wuzhu/ncrash/monitor/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/wuzhu/ncrash/monitor/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_nativecrash/: README.md  build.gradle
lib_nativecrash/src/androidTest/java/com/toptop/nativecrash/: ExampleInstrumentedTest.kt
lib_nativecrash/src/main/cpp/: CMakeLists.txt  nativecrash.cpp
lib_nativecrash/src/main/cpp/include/: native-lib.h
lib_nativecrash/src/main/cpp/include/crash/: CrashAnalyser.h  JNIBridge.h  SignalHandler.h  Utils.h
lib_nativecrash/src/main/cpp/src/crash/: CrashAnalyser.cpp  JNIBridge.cpp  SignalHandler.cpp  Utils.cpp
lib_nativecrash/src/main/java/com/toptop/nativecrash/: NativeCrashListener.kt  NativeCrashMonitor.kt  SystemThreadGroupUtils.kt
lib_nativecrash/src/test/java/com/toptop/nativecrash/: ExampleUnitTest.kt
